fixing alignment and keep consistent 0em margin .

--- a/inst/css/filter-panel.css
+++ b/inst/css/filter-panel.css
@@ -185,7 +185,7 @@ a.remove_all:hover {
 }
 
 .filter-card-body div.form-group {
-  margin: 0;
+  margin: 0em;
   font-size: small;
 }
 
@@ -194,7 +194,7 @@ a.remove_all:hover {
 }
 
 .checkbox label {
-  margin: 0;
+  margin: 0em;
 }
 
 /* Needed for bs4 */
@@ -257,7 +257,7 @@ a.remove_all:hover {
   border: none;
   border-radius: 0;
   box-shadow: none;
-  margin: 0;
+  margin: 0em;
 }
 
 .filter-card-header {
@@ -349,7 +349,7 @@ a.remove_all:hover {
   height: 1.75em;
   width: 90%;
   background-color: white;
-  margin: 0px;
+  margin: 0em;
   border-radius: 0px;
 }
 
@@ -377,4 +377,13 @@ a.remove_all:hover {
 
 .filter_datelike_input  input {
   font-size: 1em !important;
+}
+
+.form-group .checkbox label .shiny-bound-input {
+  position: absolute;
+  margin-top: 0.3rem;
+}
+
+.form-group .checkbox label span span {
+  margin-left: 1.5em;
 }
